# dd-cfr

./: .flake8  .gitignore  .pylintrc  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: run-tests.yml
docs/: api.rst  conf.py  foo.rst  index.rst
docs/_templates/: custom-module-template.rst
src/dd_cfr/: __init__.py  common.py  mymodule.py
src/dd_cfr/algorithms/: __init__.py  cfr.py
src/dd_cfr/games/: __init__.py  base_game.py  kuhn_poker.py
src/dd_cfr/games/schnapsen/: __init__.py  action.py  card.py  card_collection.py  card_value.py  deck.py  hand.py  suit.py  won_cards.py
src/dd_cfr/nestedmodule/: __init__.py  nestedfile.py
tests/: test_mymodule.py
tests/algorithms/: test_cfr.py
tests/games/schnapsen/: test_action.py  test_card.py  test_card_collection.py  test_card_value.py  test_deck.py  test_hand.py  test_suit.py  test_won_cards.py
tests/nestedmodule/: test_nestedfile.py
